--- a/index.html
+++ b/index.html
@@ -92,21 +92,9 @@
   </section>
   <!-- About -->
   <section>
-
-  <!-- Personal Info -->
-  <section id="contact">
-    <h2>Personal Information</h2>
-    <div class="personal-info">
-      <div class="info-item"><i class="fas fa-phone"></i> <span>+31 6 5534 3532</span></div>
-      <div class="info-item"><i class="fas fa-envelope"></i> <a href="mailto:katy930306@gmail.com">katy930306@gmail.com</a></div>
-      <div class="info-item"><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/katyyin" target="_blank">linkedin.com/in/katyyin</a></div>
-      <div class="info-item"><i class="fas fa-map-marker-alt"></i> <span>Noord-Brabant, Netherlands</span></div>
-    </div>
-  </section>
-
     <h2>About Me</h2>
-    <p>Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.</p>
-
+    <p>Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.
+</p>
     <!-- KPI -->
     <div class="kpi-cards">
       <div class="kpi-card"><span data-target="10000">0</span>Orders/Month</div>
@@ -115,7 +103,6 @@
       <div class="kpi-card"><span data-target="25">0</span>Conversion Increase %</div>
     </div>
   </section>
-
   <!-- Key Projects -->
   <section>
     <h2>Key Projects</h2>
@@ -149,7 +136,6 @@
       </div>
     </div>
   </section>
-
   <!-- Experience -->
   <section>
     <h2>Experience</h2>
@@ -159,7 +145,7 @@
       <ul>
         <li>Designed and implemented multi-country GA4 & Power BI dashboards.</li>
         <li>Analyzed website funnels to support UX design and conversion uplift.</li>
-        <li>Managed SEO/SEM, automation, display ads with measurable outcomes.</li>
+        <li>Managed SEO/SEM, automation, and display ads with measurable outcomes.</li>
       </ul>
     </div>
     <div class="experience-card">
@@ -247,4 +233,5 @@
     counters.forEach(counter => observer.observe(counter));
   </script>
 </body>
+
 </html>
