--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
     .kpi-card span { display:block; font-size:1.5em; color:#007BFF; font-weight:bold; margin-bottom:5px; }
 
     /* Skills */
-    .skills, .tools { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
-    .skill, .tool { background: #f9f9f9; color: #000; padding: 10px 15px; font-weight: 500; border-radius: 5px; }
-
-    /* Core Skills */
     .skills-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
     .skills-container .card { background: #f0f0f0; padding: 20px; border-radius: 10px; }
     .skills-container .card h3 { margin-bottom: 10px; font-size: 1.1em; }
@@ -77,7 +73,6 @@
 </head>
 <body>
 
- 
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
@@ -159,18 +154,7 @@
     </div>
   </section>
 
-  <!-- Skills & Tools -->
-  <section>
-    <h2>Skills & Tools</h2>
-    <div class="tools">
-      <div class="tool">GA4, Power BI, Looker Studio</div>
-      <div class="tool">Conversion Funnel Optimization</div>
-      <div class="tool">Customer Insights & NPS</div>
-      <div class="tool">Google Ads, SEO, Hubspot</div>
-    </div>
-  </section>
-
-<!-- Core Skills -->
+ <!-- Skills -->
   <section class="skills">
     <h2>Core Skills</h2>
     <div class="skills-container">
@@ -188,7 +172,6 @@
       </div>
     </div>
   </section>
-
 
   <!-- Personal Info -->
   <section id="contact">
@@ -235,3 +218,4 @@
 </body>
 
 </html>
+
