--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     .project-text { flex: 1; min-width: 230px; }
     .project-img { flex: 1; min-width: 230px; text-align: center; }
     .project-img img { width: 100%; max-width: 350px; border-radius: 6px; object-fit: cover; } /* 减小最大宽度 */
+    
+      /* Languages */
+    .languages { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
+    .languages { background: #f9f9f9; color: #000; padding: 10px 15px; font-weight: 500; border-radius: 5px; }
 
     /* Personal Info (替代 Contact Form) */
     .personal-info { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; max-width: 600px; } /* 减小间隙 */
@@ -173,6 +177,15 @@
     </div>
   </section>
 
+  <!-- languages -->
+  <section>
+    <h2>Languages</h2>
+    <div class="languages">
+      <div class="languages">Chinese: Native Proficiency</div>
+      <div class="languages">English: Full Professional Working Proficiency </div>
+      <div class="languages">Dutch:Limietd Working Proficiency</div>
+    </div>
+  </section>
   <!-- Personal Info -->
   <section id="contact">
     <h2>Personal Information</h2>
@@ -217,3 +230,4 @@
   </script>
 </body>
 </html>
+
