--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
   <!-- About -->
   <section>
     <h2>About Me</h2>
-    <p>Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.</p>
+    <p>Data-driven Digital Marketing & Analytics professional with 5+ years of experience in web analytics, digital performance tracking, and e-commerce optimization across Europe and APAC. Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.</p>
     <!-- KPI -->
     <div class="kpi-cards">
       <div class="kpi-card"><span data-target="10000">0</span>Orders/Month</div>
-      <div class="kpi-card"><span data-target="300000">0</span>Revenue/Month</div>
+      <div class="kpi-card"><span data-target="300000">0</span>Revenue/Month ¥</div>
       <div class="kpi-card"><span data-target="30">0</span>Web Traffic Increase %</div>
       <div class="kpi-card"><span data-target="25">0</span>Conversion Increase %</div>
     </div>
@@ -128,7 +128,7 @@
         <div class="project-text">
           <h3>Sector Online Campaign</h3>
           <ul>
-            <li>Increased MQLs by 40% YoY through SEO, Google Ads, and multi-channel strategy.</li>
+            <li>Increased MQLs by 40% YoY through SEO, Google Ads, and multi-channel online strategy.</li>
             <li>Improved conversion rate by 25% via A/B testing CTAs and landing pages.</li>
           </ul>
         </div>
@@ -142,18 +142,21 @@
       <h3>Heras B.V. – Digital Marketing Coordinator</h3>
       <span>Mar 2019 – Apr 2024</span>
       <ul>
-        <li>Designed and implemented multi-country GA4 & Power BI dashboards.</li>
-        <li>Analyzed website funnels to support UX design and conversion uplift.</li>
-        <li>Managed SEO/SEM, automation, and display ads with measurable outcomes.</li>
+        <li>Designed and implemented multi-country GA4 & Power BI dashboards, enabling visibility of key KPIs (conversion, engagement, NPS).</li>
+        <li>Analyzed website behavior & funnels to identify drop-off points, directly supporting UX design, lead nurturing, and conversion uplift.</li>
+        <li>Partnered with sales, product, and customer service teams to translate analytics into actionable business decisions.</li>
+        <li>Managed and optimized multi-channel campaigns (SEO/SEM, automation, display ads) with a strong focus on measurable outcomes.</li>
+        <li>Coached stakeholders across markets on digital analytics, promoting data-informed decision-making.</li> 
       </ul>
     </div>
     <div class="experience-card">
       <h3>Meituan 7+1 Supermarket – Store Manager</h3>
       <span>Apr 2024 – Apr 2025</span>
       <ul>
-        <li>Launched new digital-first front warehouse store, driving data-informed operations.</li>
+        <li>Launched and managed a new digital-first front warehouse store, combining data-driven decision-making with customer analytics.</li>
+        <li>Monitored customer journey data (purchase behavior, satisfaction scores) to improve retention and conversion.<li/>
         <li>Delivered 10,000+ monthly orders & ¥30,000+ revenue in 6 months.</li>
-        <li>Achieved top 5 in regional customer satisfaction.</li>
+        <li>Achieved top 5 in regional customer satisfaction, based on continuous survey data analysis.</li>
       </ul>
     </div>
   </section>
@@ -163,12 +166,16 @@
     <h2>Core Skills</h2>
     <div class="skills-container">
       <div class="card">
-        <h3>Advertising & SEO</h3>
-        <p>Google Ads, SEO Strategy, Social Media Ads, Conversion Optimization</p>
-      </div>
-      <div class="card">
         <h3>Analytics & Tools</h3>
         <p>Google Analytics, Power BI, Looker Studio, HubSpot, Automation</p>
+      </div>
+            <div class="card">
+        <h3>Web/Mobile Performance Optimization</h3>
+        <p>UX, A/B testing, GDPR Compliance</p>
+      </div>
+            <div class="card">
+        <h3>Advertising & SEO</h3>
+        <p>Google Ads, SEO Strategy, Social Media Ads, Conversion Optimization</p>
       </div>
       <div class="card">
         <h3>Soft Skills</h3>
@@ -186,17 +193,17 @@
       <div class="languages">Dutch:Limietd Working Proficiency</div>
     </div>
   </section>
+
   <!-- Personal Info -->
   <section id="contact">
-    <h2>Personal Information</h2>
+    <h2>Contact Me</h2>
     <div class="personal-info">
-      <div class="info-item"><i class="fas fa-phone"></i> <span>+31 6 1234 5678</span></div>
-      <div class="info-item"><i class="fas fa-envelope"></i> <a href="mailto:katy@example.com">katy@example.com</a></div>
-      <div class="info-item"><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/katyyin" target="_blank">linkedin.com/in/katyyin</a></div>
-      <div class="info-item"><i class="fas fa-map-marker-alt"></i> <span>Amsterdam, Netherlands</span></div>
+      <div class="info-item"><i class="fas fa-phone"></i> <a href="tel:0031655343532">+31 6 5534 3532</a></div>
+      <div class="info-item"><i class="fas fa-envelope"></i> <a href="mailto:katy930206@gmail.com">katy930206@gmail.com</a></div>
+      <div class="info-item"><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/yaqi-yin/" target="_blank">LinkedIn</a></div>
+      <div class="info-item"><i class="fas fa-map-marker-alt"></i> <span>Noord-Brabant, Netherlands</span></div>
     </div>
   </section>
-
   <!-- Footer -->
   <footer>
     &copy; 2025 Yaqi Yin | Digital Marketing
@@ -230,5 +237,6 @@
   </script>
 </body>
 </html>
+
 
 
