--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     .project-img img { width: 100%; max-width: 350px; border-radius: 6px; object-fit: cover; } /* 减小最大宽度 */
     
       /* Languages */
-    .languages { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
-    .languages { background: #f9f9f9; color: #000; padding: 10px 15px; font-weight: 500; border-radius: 5px; }
+    .languages, .tools { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 20px; }
+    .language, .tool { background: #f9f9f9; color: #000; padding: 10px 15px; font-weight: 500; border-radius: 5px; }
 
     /* Personal Info (替代 Contact Form) */
     .personal-info { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; max-width: 600px; } /* 减小间隙 */
@@ -170,7 +170,7 @@
         <p>Google Analytics, Power BI, Looker Studio, HubSpot, Automation</p>
       </div>
             <div class="card">
-        <h3>Web/Mobile Performance Optimization</h3>
+        <h3>Web/Mobile Optimization</h3>
         <p>UX, A/B testing, GDPR Compliance</p>
       </div>
             <div class="card">
@@ -187,10 +187,11 @@
   <!-- languages -->
   <section>
     <h2>Languages</h2>
-    <div class="languages">
-      <div class="languages">Chinese: Native Proficiency</div>
-      <div class="languages">English: Full Professional Working Proficiency </div>
-      <div class="languages">Dutch:Limietd Working Proficiency</div>
+    <div class="tools">
+      <div class="tool">Chinese: Native Proficiency</div>
+      <div class="tool">English: Full Professional Working Proficiency </div>
+      <div class="tool">Dutch:Limietd Working Proficiency</div>
+      
     </div>
   </section>
 
@@ -237,6 +238,7 @@
   </script>
 </body>
 </html>
+
 
 
 
