--- a/index.html
+++ b/index.html
@@ -160,7 +160,20 @@
       </ul>
     </div>
   </section>
-
+<!-- Education -->
+  <section>
+    <h2>Education Backgrounds</h2>
+    <div class="experience-card">
+      <h3>University of Twente – Master of Business Administration (MSc)</h3>
+      <span>Feb 2017 – Aug 2018</span>
+      <ul>Specialized in Strategic Marketing and Business Information
+      </ul>
+    </div>
+    <div class="experience-card">
+      <h3>Saxion University of Applied Sciences – Bachelor of International Business Management Studies</h3>
+      <span>Apr 2024 – Apr 2025</span>
+    </div>
+  </section>
  <!-- Skills -->
   <section class="skills">
     <h2>Core Skills</h2>
@@ -238,6 +251,7 @@
   </script>
 </body>
 </html>
+
 
 
 
