--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       </div>
     </div>
     <div class="hero-img">
-      <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80" alt="Yaqi Yin">
+      <img src="./Pics/yaqi_pic.jpg" alt="Yaqi Yin">
     </div>
   </section>
   
@@ -309,7 +309,7 @@
           <p>Launched dashboard report framework with GA4, Power BI and Looker Studio for real-time KPI tracking across 10+ websites.</p>
         </div>
         <div class="project-img">
-          <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Dashboard Project">
+          <img src="./Pics/YY Sample LS Dashboard_LS version.png" alt="Dashboard Project">
         </div>
       </div>
       <div class="project-card">
@@ -479,3 +479,4 @@
   </script>
 </body>
 </html>
+
