--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
       <div class="project-card">
         <div class="project-text">
           <h3>Web Analytics & Reporting Automation</h3>
-          <p>Launched dashboard report framework with GA4, Power BI and Looker Studio for real-time KPI tracking across 10+ websites.</p>
+          <p>Launched dashboard report framework with GA4, Power BI, and Looker Studio for real-time KPI tracking across 10+ websites.</p>
         </div>
         <div class="project-img">
           <img src="./Pics/YY Sample LS Dashboard_LS version.png" alt="Dashboard Project" onclick="openModal(this)">
@@ -412,6 +412,8 @@
             <li>Increased MQLs by 40% YoY through SEO, Google Ads, and multi-channel online strategy.</li>
             <li>Improved conversion rate by 25% via A/B testing CTAs and landing pages.</li>
           </ul>
+          <div class="project-img">
+          <img src="./Pics/YY Sample LS Dashboard_LS version.png" alt="Dashboard Project" onclick="openModal(this)">
         </div>
       </div>
     </div>
@@ -606,3 +608,4 @@
   </script>
 </body>
 </html>
+
