--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
             <li>Improved conversion rate by 25% via A/B testing CTAs and landing pages.</li>
           </ul>
           <div class="project-img">
-          <img src="./Pics/YY Sample LS Dashboard_LS version.png" alt="Dashboard Project" onclick="openModal(this)">
+          <img src=".delta promotion campaign.gif" alt="Dashboard Project">
         </div>
       </div>
     </div>
@@ -608,4 +608,5 @@
   </script>
 </body>
 </html>
+
 
