--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
           </div>
         </div>
         <div class="project-img">
-          <img src="./Pics/YY Sample LS Dashboard_LS version.png" alt="Dashboard Project" onclick="openModal(this)">
+          <img src="./Pics/AB testing.jpg" alt="AB Testing" onclick="openModal(this)">
         </div>
       </div>
       
@@ -500,7 +500,7 @@
           <h3>Sector Online Campaign</h3>
           <p>Increased MQLs by 40% YoY through SEO, Google Ads, and multi-channel online strategy. Improved conversion rate by 25% via A/B testing CTAs and landing pages.</p>
           <ul>
-            <li>Developed and executed comprehensive digital marketing strategy</li>
+            <li>Developed and executed a comprehensive digital marketing strategy</li>
             <li>Optimized landing pages and conversion funnels</li>
             <li>Managed multi-channel advertising campaigns</li>
           </ul>
@@ -707,3 +707,4 @@
   </script>
 </body>
 </html>
+
