--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             controls 
             poster="https://placehold.co/600x400/6f42c1/white?text=Video+Demo"
             preload="none"
-            data-src="https://assets.codepen.io/2362/small.mp4">
+            data-src="website video.mp4">
             Your browser does not support the video tag.
           </video>
           <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Customer journey analysis process and results</p>
@@ -826,3 +826,4 @@
   </script>
 </body>
 </html>
+
