--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@
           <video 
             class="lazy-media"
             controls 
-            poster="https://placehold.co/600x400/6f42c1/white?text=Video+Demo"
+            poster="./Pics/website video.mp4"
             preload="none"
-            data-src="website video.mp4">
+            data-src="./Pics/website video.mp4">
             Your browser does not support the video tag.
           </video>
           <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Customer journey analysis process and results</p>
@@ -826,4 +826,5 @@
   </script>
 </body>
 </html>
+
 
