--- a/index.html
+++ b/index.html
@@ -476,6 +476,12 @@
         <div class="project-text">
           <h3>Web Analytics & Reporting Automation</h3>
           <p>Launched dashboard report framework with GA4, Power BI, and Looker Studio for real-time KPI tracking across 10+ websites.</p>
+            <ul>
+            <li>Lunched automated dashboard report framework with multi-tools.</li>
+            <li>Realized real-time KPI tracking across multi-online campaigns and 10+ websites</li>
+            <li>Saved an average of 20 hours/month of manual reporting work</li>
+
+          </ul>
           <div class="project-tags">
             <span class="project-tag">GA4</span>
             <span class="project-tag">Power BI</span>
@@ -487,7 +493,7 @@
           <div class="lazy-placeholder" style="height: 250px;">Loading image...</div>
           <img 
             data-src="./Pics/YY Sample LS Dashboard_LS version.png" 
-            alt="Dashboard Project" 
+            alt="Dashboard Framework Project" 
             class="lazy-media"
             onclick="openModal(this)"
             loading="lazy">
@@ -497,24 +503,23 @@
       <!-- 项目2 -->
       <div class="project-card">
         <div class="project-text">
-          <h3>Website UX Optimization</h3>
-          <p>Led UX and performance enhancements across 10+ country websites, reducing bounce rate by 24% and boosting engagement by 40%.</p>
-          <ul>
-            <li>Conducted comprehensive user research and A/B testing</li>
-            <li>Improved navigation and content structure</li>
-            <li>Optimized page load times and mobile responsiveness</li>
+          <h3>Online Promotion Campaign</h3>
+          <ul>>
+            <li>Increase time-on-site by 35% via A/B testing escape room optimization priinciple</li>
+            <li>Improved conversion rate by 25% via A/B testing CTAs</li>
+            <li>Enhanced MQLs by 40% YoY through SEO, Google Ads, and multi-channel online strategy.</li>
           </ul>
           <div class="project-tags">
-            <span class="project-tag">UX Research</span>
             <span class="project-tag">A/B Testing</span>
-            <span class="project-tag">Performance</span>
+            <span class="project-tag">Socal ads</span>
+            <span class="project-tag">Google ads</span>
           </div>
         </div>
         <div class="project-img">
           <div class="lazy-placeholder" style="height: 250px;">Loading image...</div>
           <img 
             data-src="./Pics/AB testing.jpg" 
-            alt="UX Optimization Project" 
+            alt="Online Campaign" 
             class="lazy-media"
             onclick="openModal(this)"
             loading="lazy">
@@ -524,59 +529,28 @@
       <!-- 项目3 - GIF项目 -->
       <div class="project-card">
         <div class="project-text">
-          <h3>Sector Online Campaign</h3>
-          <p>Increased MQLs by 40% YoY through SEO, Google Ads, and multi-channel online strategy. Improved conversion rate by 25% via A/B testing CTAs and landing pages.</p>
+          <h3>Website UX Optimization</h3>
           <ul>
-            <li>Developed and executed a comprehensive digital marketing strategy</li>
-            <li>Optimized landing pages and conversion funnels</li>
-            <li>Managed multi-channel advertising campaigns</li>
+            <li>Led UX and performance enhancements across 10+ country websites</li>
+            <li>Reducing drop-off rate (bounce rate) by 24%</li>
+            <li>Booosted web engagement by 33%</li>
           </ul>
           <div class="project-tags">
+            <span class="project-tag">UX</span>
             <span class="project-tag">SEO</span>
             <span class="project-tag">Google Ads</span>
-            <span class="project-tag">Conversion Optimization</span>
+            <span class="project-tag">Customer Behoviour Optimization</span>
           </div>
         </div>
         <div class="project-img">
           <div class="lazy-placeholder" style="height: 250px;">Loading GIF...</div>
           <img 
-            data-src="./Pics/delta promotion campaign.gif" 
-            alt="Promotion Campaign GIF" 
+            data-src="./Pics/Website.gif" 
+            alt="UX Optimization Project" 
             class="lazy-media"
             loading="lazy">
         </div>
       </div>
-      
-      <!-- 项目4 - MP4视频项目 -->
-      <div class="project-card">
-        <div class="project-text">
-          <h3>Customer Journey Analysis</h3>
-          <p>Developed comprehensive customer journey mapping and analysis to identify key touchpoints and optimize conversion paths across multiple channels.</p>
-          <ul>
-            <li>Created interactive journey maps for different customer segments</li>
-            <li>Identified key friction points and opportunities for improvement</li>
-            <li>Implemented personalized experiences based on journey analytics</li>
-          </ul>
-          <div class="project-tags">
-            <span class="project-tag">Journey Mapping</span>
-            <span class="project-tag">Analytics</span>
-            <span class="project-tag">Personalization</span>
-          </div>
-        </div>
-        <div class="project-img">
-          <div class="lazy-placeholder" style="height: 250px;">Loading video...</div>
-          <video 
-            class="lazy-media"
-            controls 
-            poster="./Pics/website video.mp4"
-            preload="none"
-            data-src="./Pics/website video.mp4">
-            Your browser does not support the video tag.
-          </video>
-          <p style="margin-top: 10px; font-size: 0.9em; color: #666;">Customer journey analysis process and results</p>
-        </div>
-      </div>
-    </div>
   </section>
   
   <!-- 图片模态框 -->
@@ -826,5 +800,6 @@
   </script>
 </body>
 </html>
+
 
 
