--- a/index.html
+++ b/index.html
@@ -475,12 +475,10 @@
       <div class="project-card">
         <div class="project-text">
           <h3>Web Analytics & Reporting Automation</h3>
-          <p>Launched dashboard report framework with GA4, Power BI, and Looker Studio for real-time KPI tracking across 10+ websites.</p>
             <ul>
             <li>Lunched automated dashboard report framework with multi-tools.</li>
             <li>Realized real-time KPI tracking across multi-online campaigns and 10+ websites</li>
             <li>Saved an average of 20 hours/month of manual reporting work</li>
-
           </ul>
           <div class="project-tags">
             <span class="project-tag">GA4</span>
@@ -579,7 +577,7 @@
       <span>Apr 2024 – Apr 2025</span>
       <ul>
         <li>Launched and managed a new digital-first front warehouse store, combining data-driven decision-making with customer analytics.</li>
-        <li>Monitored customer journey data (purchase behavior, satisfaction scores) to improve retention and conversion.<li/>
+        <li>Monitored customer journey data (purchase behavior, satisfaction scores) to improve retention and conversion.</li>
         <li>Delivered 10,000+ monthly orders & ¥30,000+ revenue in 6 months.</li>
         <li>Achieved top 5 in regional customer satisfaction, based on continuous survey data analysis.</li>
       </ul>
@@ -800,6 +798,7 @@
   </script>
 </body>
 </html>
+
 
 
 
