--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         <div class="project-img">
           <div class="lazy-placeholder" style="height: 250px;">Loading image...</div>
           <img 
-            data-src="./Pics/AB testing.jpg" 
+            data-src="./Pics/AB testing UPDATE.jpg" 
             alt="Online Campaign" 
             class="lazy-media"
             onclick="openModal(this)"
@@ -798,6 +798,7 @@
   </script>
 </body>
 </html>
+
 
 
 
