--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@
     <div class="experience-card">
       <h3>University of Twente – Master of Business Administration (MSc)</h3>
       <span>Feb 2017 – Aug 2018</span>
-      <ul>Specialized in Strategic Marketing and Business Information
-      </ul>
+      <p>Specialized in Strategic Marketing and Business Information
+      </p>
     </div>
     <div class="experience-card">
       <h3>Saxion University of Applied Sciences – Bachelor of International Business Management Studies</h3>
@@ -823,6 +823,7 @@
   </script>
 </body>
 </html>
+
 
 
 
