--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <p>Data-driven Digital Marketing & Analytics professional with 5+ years of experience in web analytics, digital performance tracking, and e-commerce optimization across Europe and APAC. Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, improve customer journeys.</p>
+    <p>Data-driven Digital Marketing & Analytics professional with 5+ years of experience in web analytics, digital performance tracking, and e-commerce optimization across Europe and APAC. Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.</p>
     <!-- KPI -->
     <div class="kpi-cards">
       <div class="kpi-card"><span data-target="10000">0</span>Orders/Month</div>
@@ -502,13 +502,14 @@
           <h3>Web Analytics & Reporting Automation</h3>
             <ul>
             <li>Lunched automated dashboard report framework with multi-tools.</li>
-            <li>Realized real-time KPI tracking across multi-online campaigns and 10+ websites</li>
-            <li>Saved an average of 20 hours/month of manual reporting work</li>
+            <li>Enabled real-time monitoring of 40+ KPIs across 10+ websites and multi-channel campaigns (SEO, PPC, Social Ads, Email).</li>
+            <li>Saved 240 + reporting hours annually.</li>
           </ul>
           <div class="project-tags">
             <span class="project-tag">GA4</span>
             <span class="project-tag">Power BI</span>
             <span class="project-tag">Looker Studio</span>
+             <span class="project-tag">Excel</span>
             <span class="project-tag">Automation</span>
           </div>
         </div>
@@ -528,8 +529,8 @@
         <div class="project-text">
           <h3>Online Promotion Campaign</h3>
           <ul>
-            <li>Increase time-on-site by 35% via A/B testing escape room optimization priinciple</li>
-            <li>Improved conversion rate by 25% via A/B testing CTAs</li>
+            <li>Increase time-on-site by 35% via A/B testing escape room optimization priinciple.</li>
+            <li>Improved conversion rate by 25% via A/B testing CTAs.</li>
             <li>Enhanced MQLs by 40% YoY through SEO, Google Ads, and multi-channel online strategy.</li>
           </ul>
           <div class="project-tags">
@@ -554,9 +555,9 @@
         <div class="project-text">
           <h3>Website UX Optimization</h3>
           <ul>
-            <li>Led UX and performance enhancements across 10+ country websites</li>
-            <li>Reducing drop-off rate (bounce rate) by 24%</li>
-            <li>Booosted web engagement by 33%</li>
+            <li>Led UX and performance enhancements across 10+ country websites.</li>
+            <li>Reducing drop-off rate (bounce rate) by 24%.</li>
+            <li>Boosted web engagement by 33%.</li>
           </ul>
           <div class="project-tags">
             <span class="project-tag">UX</span>
@@ -590,7 +591,7 @@
       <h3>Heras B.V. – Digital Marketing Coordinator</h3>
       <span>Mar 2019 – Apr 2024</span>
       <ul>
-        <li>Designed and implemented multi-country GA4 & Power BI dashboards, enabling visibility of key KPIs (conversion, engagement, NPS).</li>
+        <li>Designed and implemented multi-country GA4 & Power BI dashboards, enabling visibility of 50+ KPIs (conversion, engagement, NPS, etc).</li>
         <li>Analyzed website behavior & funnels to identify drop-off points, directly supporting UX design, lead nurturing, and conversion uplift.</li>
         <li>Partnered with sales, product, and customer service teams to translate analytics into actionable business decisions.</li>
         <li>Managed and optimized multi-channel campaigns (SEO/SEM, automation, display ads) with a strong focus on measurable outcomes.</li>
@@ -630,7 +631,7 @@
     <div class="skills-container">
       <div class="card">
         <h3>Analytics & Tools</h3>
-        <p>Google Analytics, Power BI, Looker Studio, HubSpot, Automation</p>
+        <p>GA4, Power BI, Looker Studio, HubSpot, Automation</p>
       </div>
       <div class="card">
         <h3>Web/Mobile Optimization</h3>
@@ -653,7 +654,7 @@
     <div class="tools">
       <div class="tool">Chinese: Native Proficiency</div>
       <div class="tool">English: Full Professional Working Proficiency </div>
-      <div class="tool">Dutch:Limietd Working Proficiency</div>
+      <div class="tool">Dutch:Limited Working Proficiency</div>
     </div>
   </section>
 
@@ -664,7 +665,7 @@
       <div class="info-item"><i class="fas fa-phone"></i> <a href="tel:0031655343532">+31 6 5534 3532</a></div>
       <div class="info-item"><i class="fas fa-envelope"></i> <a href="mailto:katy930206@gmail.com">katy930206@gmail.com</a></div>
       <div class="info-item"><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/yaqi-yin/" target="_blank">LinkedIn</a></div>
-      <div class="info-item"><i class="fas fa-map-marker-alt"></i> <span>Noord-Brabant, Netherlands</span></div>
+      <div class="info-item"><i class="fas fa-map-marker-alt"></i> <span>Noord-Brabant & Zuid-Holland Netherlands</span></div>
     </div>
   </section>
   
@@ -823,6 +824,7 @@
   </script>
 </body>
 </html>
+
 
 
 
