--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       <h1>Yaqi Yin</h1>
       <p>Group Senior Web Analyst | Enhancing Online Sales & Customer Journeys</p>
       <div class="hero-buttons">
-        <a href="#contact" class="btn btn-outline">Contact Me</a>
+        <a href="#contact" class="btn btn-primary">Contact Me</a>
       </div>
     </div>
     <div class="hero-img">
@@ -823,6 +823,7 @@
   </script>
 </body>
 </html>
+
 
 
 
