--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Yaqi Yin</h1>
-      <p>Group Senior Web Analyst | Enhancing Online Sales & Customer Journeys</p>
+      <p>Digital Marketing | Group Senior Web Analyst | Enhancing Online Sales & Customer Journeys</p>
       <div class="hero-buttons">
         <a href="#contact" class="btn btn-primary">Contact Me</a>
       </div>
@@ -823,6 +823,7 @@
   </script>
 </body>
 </html>
+
 
 
 
