--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <div class="project-text">
           <h3>Web Analytics & Reporting Automation</h3>
             <ul>
-            <li>Lunched automated dashboard report framework with multi-tools.</li>
+            <li>Launched automated dashboard report framework with multi-tools.</li>
             <li>Enabled real-time monitoring of 40+ KPIs across 10+ websites and multi-channel campaigns (SEO, PPC, Social Ads, Email).</li>
             <li>Saved 240 + reporting hours annually.</li>
           </ul>
@@ -823,6 +823,7 @@
   </script>
 </body>
 </html>
+
 
 
 
