--- a/index.html
+++ b/index.html
@@ -590,10 +590,13 @@
       <h3>Heras B.V. – Digital Marketing Coordinator</h3>
       <span>Mar 2019 – Apr 2024</span>
       <ul>
-        <li>Designed and implemented multi-country GA4 & Power BI dashboards, enabling visibility of 50+ KPIs (conversion, engagement, NPS, etc).</li>
+
         <li>Analyzed website behavior & funnels to identify drop-off points, directly supporting UX design, lead nurturing, and conversion uplift.</li>
+        <li>Owned and managed websites' domains and digital platforms across multiple markets, ensuring content accuracy, SEO compliance, and consistent brand representation.</li>
+        <li>Optimized content via CMS platforms, streamlining updates, page creation, and SEO-friendly structures.</li>
+        <li>Managed and executed multi-channel campaigns (SEO/SEM, automation, display ads) with a strong focus on measurable outcomes.</li>
         <li>Partnered with sales, product, and customer service teams to translate analytics into actionable business decisions.</li>
-        <li>Managed and optimized multi-channel campaigns (SEO/SEM, automation, display ads) with a strong focus on measurable outcomes.</li>
+        <li>Designed and implemented multi-country real-time dashboards with GA4, Looker Studio & Power BI, enabling visibility of 50+ KPIs (conversion, engagement, NPS, etc).</li>
         <li>Coached stakeholders across markets on digital analytics, promoting data-informed decision-making.</li> 
       </ul>
     </div>
@@ -823,6 +826,7 @@
   </script>
 </body>
 </html>
+
 
 
 
