--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <p>Data-driven Digital Marketing & Analytics professional with 5+ years of experience in web analytics, digital performance tracking, and e-commerce optimization across Europe and APAC. Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.</p>
+    <p>Data-driven Digital Marketing & Analytics professional with 5+ years of experience in web management & analytics, digital performance tracking, and e-commerce optimization across Europe and APAC. Proven track record in GA4, Power BI, Looker Studio, and NPS analytics to uncover behavioral insights, optimize conversion funnels, and improve customer journeys.</p>
     <!-- KPI -->
     <div class="kpi-cards">
       <div class="kpi-card"><span data-target="10000">0</span>Orders/Month</div>
@@ -826,6 +826,7 @@
   </script>
 </body>
 </html>
+
 
 
 
